# haskell-servant-ludicrous-speed

./: README.md  servant-test.cabal
notes/: do-capture-symbols-matter.hs
src/: ApiType.hs  Client.hs  Server.hs
