name:                servant-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
                     , Client
                     -- , ApiType
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-server
                     , servant-client
                     , wai
                     , warp
                     , text
                     , time
                     , ghc-prim
                     , base-compat
                     , mtl
                     , aeson
                     , directory
                     , http-media
                     , http-client
                     , bytestring
                     , string-conversions
                     , attoparsec
                     , aeson-compat
                     , lucid
                     , blaze-html
                     , blaze-markup
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-test
